# payment_request

./: .env.backend.example  .env.db.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code-checker.yaml
nginx/: nginx.conf
nginx/conf.d/: backend.conf
requests_app/: .dockerignore  Dockerfile  __init__.py  entrypoint.sh  gunicorn.conf.py
requests_app/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
requests_app/config/components/: auth_validators.py  common.py  database.py  i18n.py  installed_apps.py  middleware.py  rest_framework.py  template.py
requests_app/request/: admin.py  apps.py  models.py  signals.py  tasks.py
requests_app/request/api/: urls.py
requests_app/request/api/v1/: serializers.py  urls.py  views.py
requests_app/request/fixtures/: payment_requests.json
requests_app/request/migrations/: 0001_initial.py
requests_app/request/tests/: test_api.py
